[Misc] Fix various SonarQube issues reported by SonarCloud
* java:S3824: use Map#computeIfAbsent()/putIfAbsent()/replace() instead of a get()/containsKey()
  test followed by a put()
* java:S1130: remove "throws Exception" declarations that cannot be thrown, on JUnit test methods
* java:S2129: do not instantiate String/Boolean objects needlessly
* java:S1158: use the static Boolean#toString()/Integer#compare() methods instead of instantiating
  a temporary wrapper object
* java:S6395: unwrap unnecessarily grouped regex subpatterns
* java:S2388: prefix an inner class call to an ambiguous super class method with "super."
* java:S9016: extract a nested mock creation to a local variable

Co-Authored-By: Vincent Massol <vincent@massol.net>